; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlstyle.c_get_nsstyle_pos.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmlstyle.c_get_nsstyle_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"%p %d %p\0A\00", align 1
@S_OK = common dso_local global i64 0, align 8
@pxW = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [40 x i8] c"only px values are currently supported\0A\00", align 1
@E_FAIL = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [8 x i8] c"ret %f\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_3__*, i32, float*)* @get_nsstyle_pos to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @get_nsstyle_pos(%struct.TYPE_3__* %0, i32 %1, float* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca float*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store float* %2, float** %6, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load float*, float** %6, align 8
  %14 = call i32 (i8*, ...) @TRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), %struct.TYPE_3__* %11, i32 %12, float* %13)
  %15 = load float*, float** %6, align 8
  store float 0.000000e+00, float* %15, align 4
  %16 = call i32 @nsAString_Init(i32* %7, i32* null)
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %5, align 4
  %21 = call i64 @get_nsstyle_attr_nsval(i32 %19, i32 %20, i32* %7)
  store i64 %21, i64* %8, align 8
  %22 = load i64, i64* %8, align 8
  %23 = load i64, i64* @S_OK, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %47

25:                                               ; preds = %3
  %26 = call i32 @nsAString_GetData(i32* %7, i32** %10)
  %27 = load i32*, i32** %10, align 8
  %28 = icmp ne i32* %27, null
  br i1 %28, label %29, label %46

29:                                               ; preds = %25
  %30 = load i32*, i32** %10, align 8
  %31 = call float @strtolW(i32* %30, i64** %9, i32 10)
  %32 = load float*, float** %6, align 8
  store float %31, float* %32, align 4
  %33 = load i64*, i64** %9, align 8
  %34 = load i64, i64* %33, align 8
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %45

36:                                               ; preds = %29
  %37 = load i64*, i64** %9, align 8
  %38 = load i32, i32* @pxW, align 4
  %39 = call i64 @strcmpW(i64* %37, i32 %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %45

41:                                               ; preds = %36
  %42 = call i32 @nsAString_Finish(i32* %7)
  %43 = call i32 @FIXME(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0))
  %44 = load i64, i64* @E_FAIL, align 8
  store i64 %44, i64* %8, align 8
  br label %45

45:                                               ; preds = %41, %36, %29
  br label %46

46:                                               ; preds = %45, %25
  br label %47

47:                                               ; preds = %46, %3
  %48 = load float*, float** %6, align 8
  %49 = load float, float* %48, align 4
  %50 = fpext float %49 to double
  %51 = call i32 (i8*, ...) @TRACE(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), double %50)
  %52 = call i32 @nsAString_Finish(i32* %7)
  %53 = load i64, i64* %8, align 8
  ret i64 %53
}

declare dso_local i32 @TRACE(i8*, ...) #1

declare dso_local i32 @nsAString_Init(i32*, i32*) #1

declare dso_local i64 @get_nsstyle_attr_nsval(i32, i32, i32*) #1

declare dso_local i32 @nsAString_GetData(i32*, i32**) #1

declare dso_local float @strtolW(i32*, i64**, i32) #1

declare dso_local i64 @strcmpW(i64*, i32) #1

declare dso_local i32 @nsAString_Finish(i32*) #1

declare dso_local i32 @FIXME(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
